k8s-configs/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rasa-x-loadbalancer
  namespace: rasax
spec:
  selector:
    app: rasax-release-rasa-x
  ports:
  - port: 8000
    targetPort: 5002
  type: LoadBalancer
