k8s-configs/tls-webservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rasa-webservice-ingress
  namespace: rasax
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - EXAMPLE.COM
    secretName: rasa-webservice-ingress-tls
  rules:
  - host: EXAMPLE.COM
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rasa-webservice-service
            port:
              name: http
